--- a/en_US.lang
+++ b/en_US.lang
@@ -53,3 +53,4 @@ furn_power_cell_press=Power Cell Press
 furn_power_cell_press_desc=Presses metal and flux into Power Cells
 furn_small_landing_pad=Small Landing Pad
 furn_small_landing_pad_desc=A landing pad for small spaceboats to land.
+need_oxygen=Oxygen {0}
