--- a/es_ES.lang
+++ b/es_ES.lang
@@ -1,4 +1,4 @@
-﻿﻿menu_construction=Construcción
+menu_construction=Construcción
 menu_work=Trabajo
 menu_world=Mundo
 menu_options=Opciones
@@ -8,7 +8,9 @@ menu_floor=Piso
 menu_save=Guardar
 menu_resume=Continuar
 menu_quit=Salir
+furniture=Mueble
 build_floor=Poner Piso
+build_ladder=Construir Escalera
 remove_floor=Quitar Piso
 deconstruct_furniture=Deconstruir Mueble
 new_world=Nuevo Mundo
@@ -23,10 +25,6 @@ cancel=Cancelar
 filename=Nombre del Archivo
 selection_hp={0}/{1}
 build=Construir {0}
-tile_Empty=Nada
-tile_Empty_desc=Un espacio vacio.
-tile_Floor=Piso
-tile_Floor_desc=Cumple con los estándares más altos de antideslizantes.
 furn_steel_wall=Pared de Acero
 furn_steel_wall_desc=Una pared hecha de acero.
 furn_door=Puerta
@@ -37,11 +35,24 @@ furn_oxygen_generator=Generador de Oxígeno
 furn_oxygen_generator_desc=Generando oxígeno para tus astronautas.
 furn_mining_drone_station=Estación de minería robótica
 furn_mining_drone_station_desc=Extrayendo materiales de la nada.
-furn_power_generator=Generador eléctrico
-furn_power_generator_desc=Genera electricidad de la nada. 
 furn_metal_smelter=Fundidor de metales
 furn_metal_smelter_desc=Funde el hierro crudo creando un metal.
 furn_airlock=Esclusa de aire
 furn_airlock_desc=Una esclusa de aire previente que la base se quede sin aire.
+tile_Empty=Nada
+tile_Empty_desc=Un espacio vacio.
+tile_Floor=Piso
+tile_Floor_desc=Cumple con los estándares más altos de antideslizantes.
+tile_Ladder=Escalera
+tile_Ladder_desc=Sistema de movimiento espacial de alta tecnología. Efectividad reducida cuando la sostienen brazos debiles.
 furn_cloning_pod=Capullo de Clonación
-furn_cloning_pod_desc=Crea un trabajador adicional, y se destruye.
+furn_cloning_pod_desc=Crea un trabajador adicional, y luego se destruye.
+furn_power_generator=Generador eléctrico
+furn_power_generator_desc=Genera electricidad de la nada.
+furn_power_cell_press=Prensa de células de poder
+furn_power_cell_press_desc=Prensa metal y fundente en células de energia.
+furn_small_landing_pad=Pequeña pista de aterrizaje
+furn_small_landing_pad_desc=Una pista de aterrizaje para que desciendan pequeñas naves espaciales.
+furn_heater=Calentador
+furn_heater_desc=Aumenta la temperatura de la habitación.
+need_oxygen=Oxígeno {0}
