--- a/en_US.lang
+++ b/en_US.lang
@@ -53,4 +53,6 @@ furn_power_cell_press=Power Cell Press
 furn_power_cell_press_desc=Presses metal and flux into Power Cells
 furn_small_landing_pad=Small Landing Pad
 furn_small_landing_pad_desc=A landing pad for small spaceboats to land.
+furn_heater=Heater
+furn_heater_desc=Raises temperature in the room.
 need_oxygen=Oxygen {0}
