Added better translates from removed duplicated file

--- a/no.lang
+++ b/no.lang
@@ -1,11 +1,11 @@
 build_floor=Bygg gulv
 remove_floor=Fjerne gulv
-deconstruct_furniture=Dekonstruer møbel
+deconstruct_furniture=Fjern møbler
 new_world=Nytt spill
-load=Last
+load=Åpne
 save=Lagre
 temp_pathfinding_test=Pathfinding Test
-selection_panel_title=Gjeldende utvalg
+selection_panel_title=Valg
 save_file=Lagre fil...
 load_file=Last inn fil...
 okay=OK
@@ -13,16 +13,16 @@ cancel=Avbryt
 filename=Filnavn
 selection_hp={0} / {1}
 build=Bygger {0}
-furn_steel_wall=Stål vegg
+furn_steel_wall=Stålvegg
 furn_steel_wall_desc=En vegg laget av stål.
 furn_door=Dør
 furn_door_desc=En dør. Den kan åpnes
-furn_stockpile=Beredskapslager
-furn_stockpile_desc=En lagring materialer.
-furn_oxygen_generator=Oksygen Generator
-furn_oxygen_generator_desc=Genererer oksygen for dine astronauter.
-furn_mining_drone_station=Mining Drone
-furn_mining_drone_station_desc=Gruvedrift materiale ut av ingenting.
+furn_stockpile=Lager
+furn_stockpile_desc=Lagringsplass for ressurser.
+furn_oxygen_generator=Oksygengenerator
+furn_oxygen_generator_desc=Produserer oksygen for astronautene dine.
+furn_mining_drone_station=Gruvedriftdrone
+furn_mining_drone_station_desc=Utvinner materiale ut av ingenting.
 furn_airlock=Luftsluse
 furn_airlock_desc=En sluse hindrer luft i å forlate base
 tile_Empty=Tom
