Revert "Norwegian add and cleanup"

--- a/en_US.lang
+++ b/en_US.lang
@@ -1,55 +1,58 @@
-﻿menu_construction=Bygg
-menu_work=Arbeid
-menu_world=Verden
-menu_options=Valg
-menu_settings=Instillinger
-menu_furniture=Møbler
-menu_floor=Gulv
-menu_save=Lagre
-menu_resume=Fortsett
-menu_quit=Avslutt
-furniture=Møbel
-build_floor=Bygg gulv
-remove_floor=Fjerne gulv
-deconstruct_furniture=Fjern møbler
-new_world=Nytt spill
-load=Åpne
-save=Lagre
+﻿menu_construction=Construction
+menu_work=Work
+menu_world=World
+menu_options=Options
+menu_settings=Settings
+menu_furniture=Furniture
+menu_floor=Floor
+menu_save=Save
+menu_resume=Resume
+menu_quit=Quit
+furniture=Furniture
+build_floor=Build Floor
+build_ladder=Build Ladder
+remove_floor=Remove Floor
+deconstruct_furniture=Deconstruct Furniture
+new_world=New World
+load=Load
+save=Save
 temp_pathfinding_test=Pathfinding Test
-selection_panel_title=Valg
-save_file=Lagre fil...
-load_file=Last inn fil...
-okay=OK
-cancel=Avbryt
-filename=Filnavn
-selection_hp={0} / {1}
-build=Bygger {0}
-furn_steel_wall=Stålvegg
-furn_steel_wall_desc=En vegg laget av stål.
-furn_door=Dør
-furn_door_desc=En dør. Den kan åpnes
-furn_stockpile=Lager
-furn_stockpile_desc=Lagringsplass for ressurser.
-furn_oxygen_generator=Oksygengenerator
-furn_oxygen_generator_desc=Produserer oksygen for astronautene dine.
-furn_mining_drone_station=Gruvedriftdrone
-furn_mining_drone_station_desc=Utvinner materiale ut av ingenting.
-furn_airlock=Luftsluse
-furn_airlock_desc=En sluse hindrer luft i å forlate base
-furn_metal_smelter=Metallsmelteverk
-furn_metal_smelter_desc=Lager stål av jern
-furn_cloning_pod=Kloningspode
-furn_cloning_pod_desc=Bruk og kast versjonen av klonings maskinen, lager en ny arbeider
-furn_power_generator=Kraftstasjon
-furn_power_generator_desc=Lager elektrisitet ut av ingenting
-furn_power_cell_press=Batterifabrikk
-furn_power_cell_press_desc=Setter sammen metall og flux til et batteri
-furn_small_landing_pad=Landingsdekk
-furn_small_landing_pad_desc=Her kan små romskip lande
-furn_heater=Ovn
-furn_heater_desc=Varm opp rom, det kan være kalt i romme
-need_oxygen=Oksygen {0}
-tile_Empty=Ingenting
-tile_Empty_desc=Her er det bare vakum
-tile_Floor=Etasje
-tile_Floor_desc=Oppfyller de høyeste sklisikker standardene.
+selection_panel_title=Current Selection
+save_file=Save File...
+load_file=Load File...
+okay=Okay
+cancel=Cancel
+filename=Filename
+selection_hp={0}/{1}
+build=Build {0}
+furn_steel_wall=Steel Wall
+furn_steel_wall_desc=A wall made out of steel.
+furn_door=Door
+furn_door_desc=A door.
+furn_stockpile=Stockpile
+furn_stockpile_desc=A storage for your materials.
+furn_oxygen_generator=Oxygen Generator
+furn_oxygen_generator_desc=Generating oxygen for your astronauts.
+furn_mining_drone_station=Mining Drone
+furn_mining_drone_station_desc=Mining materials out of nothing.
+furn_metal_smelter=Metal Smelter
+furn_metal_smelter_desc=Smelts your raw iron into metal.
+furn_airlock=Airlock
+furn_airlock_desc=An Airlock prevents air from leaving the base
+tile_Empty=Empty
+tile_Empty_desc=An empty tile.
+tile_Floor=Floor
+tile_Floor_desc=Meets the highest non-skid standards.
+tile_Ladder=Ladder
+tile_Ladder_desc=High-tech space movement system. Effectiveness reduced when held by weak noodle arms
+furn_cloning_pod=Cloning Pod
+furn_cloning_pod_desc=Creates an additional worker, then is destroyed.
+furn_power_generator=Power Generator
+furn_power_generator_desc=Generates power out of nothing.
+furn_power_cell_press=Power Cell Press
+furn_power_cell_press_desc=Presses metal and flux into Power Cells
+furn_small_landing_pad=Small Landing Pad
+furn_small_landing_pad_desc=A landing pad for small spaceboats to land.
+furn_heater=Heater
+furn_heater_desc=Raises temperature in the room.
+need_oxygen=Oxygen {0}
