--- a/da_DK.lang
+++ b/da_DK.lang
@@ -6,11 +6,11 @@ menu_settings=Indstillinger
 menu_furniture=Møbler
 menu_floor=Gulv
 menu_save=Gem
-menu_resume=Resume
+menu_resume=Genoptag
 menu_quit=Afslut
 build_floor=Byg gulv
 remove_floor=Fjern gulv
-deconstruct_furniture=Dekonstruer møbel
+deconstruct_furniture=Fjern møbel
 new_world=Ny Verden
 load=Indlæs
 save=Gem
@@ -28,13 +28,13 @@ furn_steel_wall_desc=En væg lavet af stål.
 furn_door=Dør
 furn_door_desc=En dør.
 furn_stockpile=Lager
-furn_stockpile_desc=En lagerplads til dine materialer.
+furn_stockpile_desc=Lagerplads til dine materialer.
 furn_oxygen_generator=Ilt Generator
-furn_oxygen_generator_desc=Genererer ilt til din astronauter.
-furn_mining_drone_station=Minedrone
-furn_mining_drone_station_desc=Minedrift materialer ud af ingenting.
+furn_oxygen_generator_desc=Genererer ilt til dine astronauter.
+furn_mining_drone_station=Minestation
+furn_mining_drone_station_desc=Miner materialer ud af ingenting.
 furn_metal_smelter=Metal Smelter
-furn_metal_smelter_desc=Smelter rå jern om til stål.
+furn_metal_smelter_desc=Smelter jernmalm om til stål.
 furn_airlock=Luftsluse
 furn_airlock_desc=En luftsluse som forhindrer at luften forlader basen.
 tile_Empty=Tom
