--- a/en_US.lang
+++ b/en_US.lang
@@ -7,6 +7,7 @@ menu_furniture=Furniture
 menu_floor=Floor
 menu_save=Save
 menu_resume=Resume
+menu_quests=Quests
 menu_quit=Quit
 furniture=Furniture
 build_floor=Build Floor
