--- a/hu_HU.lang
+++ b/hu_HU.lang
@@ -1,31 +1,61 @@
-build_floor=Építeni a padló
-remove_floor=Távolítsa el a padló
-deconstruct_furniture=Bontani bútor
+menu_construction=Építkezés
+menu_work=Munka
+menu_world=Világ
+menu_options=Opciók
+menu_settings=Beállítások
+menu_furniture=Építmények
+menu_floor=Padló
+menu_save=Mentés
+menu_resume=Folytatás
+menu_quests=Küldetések
+menu_quit=Kilépés
+furniture=Építmény
+build_floor=Padló építése
+build_ladder=Létra építése
+remove_floor=Padló elbontása
+deconstruct_furniture=Építmény lebontása
 new_world=Új világ
-load=Terhelés
+load=Betöltés
 save=Mentés
-temp_pathfinding_test=Útkereső teszt
-selection_panel_title=Aktuális kijelölés
-save_file=Mentse a fájlt...
-load_file=-Fájl betöltése...
-okay=oké
-cancel=Mégse
-filename=Fájlnév
-selection_hp={0} / {1}
-build=A(z) {0} építeni
+temp_pathfinding_test=Pathfinding Test
+selection_panel_title=Current Selection
+save_file=Mentés...
+load_file=Betöltés...
+okay=Rendben
+cancel=Mégsem
+filename=Fáljnév
+selection_hp={0}/{1}
+build={0} építése
 furn_steel_wall=Acél fal
-furn_steel_wall_desc=Egy fal acélból készült.
+furn_steel_wall_desc=Fal acélból.
 furn_door=Ajtó
-furn_door_desc=Egy ajtó.
-furn_stockpile=Készletek
-furn_stockpile_desc=A tároló az Ön anyagok.
-furn_oxygen_generator=Oxigén-generátor
-furn_oxygen_generator_desc=Generál oxigén az űrhajósok.
-furn_mining_drone_station=Bányászati Drone
-furn_mining_drone_station_desc=Bányászati anyagok a semmiből.
+furn_door_desc=Ajtó.
+furn_stockpile=Raktár
+furn_stockpile_desc=Egy kijelölt hely a nyersanyagoknak.
+furn_oxygen_generator=Oxigén generátor
+furn_oxygen_generator_desc=Éleny (O2) generálása az űrhajósoknak
+furn_mining_drone_station=Bányászautomata
+furn_mining_drone_station_desc=Nyersanyagok kibányászása.
+furn_metal_smelter=Kohó
+furn_metal_smelter_desc=Vasérc olvasztása vassá.
 furn_airlock=Légzsilip
-furn_airlock_desc=Légzsilip megakadályozza, hogy a levegő elhagyja a bázist
+furn_airlock_desc=A levegő elszökését meggátoló zárszerkezet.
 tile_Empty=Üres
-tile_Empty_desc=Egy üres cserép.
-tile_Floor=Emelet
-tile_Floor_desc=Legnagyobb nem-farolás szabványoknak.
+tile_Empty_desc=Üres mező.
+tile_Floor=Padló
+tile_Floor_desc=Legjobb minőségű csúszásgátló anyagból.
+tile_Ladder=Létra
+tile_Ladder_desc=High-tech helyváltoztató rendszer. Gyenge karral nem ajánlott.
+furn_cloning_pod=Másoló
+furn_cloning_pod_desc=Új munkást hoz létre, majd megsemmisíti önmagát.
+furn_power_generator=Áramfejlesztő
+furn_power_generator_desc=Áramot generál ?semmiből?.
+furn_power_cell_press=Power Cell prés
+furn_power_cell_press_desc=Fluxust és vasat présel Power Cell-é.
+furn_small_landing_pad=Kis leszállóhely
+furn_small_landing_pad_desc=Kijelölt leszállóhely kis űrhajóknak.
+furn_heater=Radiátor
+furn_heater_desc=Melegíti a bent lévő levegőt.
+furn_oxygen_compressor=Oxigéntartály
+furn_oxygen_compressor_desc=Összegyűjti az oxigént, amikor többlet van; kiengedi, amikor hiány van.
+need_oxygen=Éleny {0}
