Updated Romanian localization based on en_US and human translated it (by me).

--- a/ro_RO.lang
+++ b/ro_RO.lang
@@ -1,31 +1,63 @@
-build_floor=Construi podea
-remove_floor=Elimina podea
-deconstruct_furniture=Deconstruiasca mobilier
-new_world=Lumea nouă
-load=Încărcare
-save=Salva
-temp_pathfinding_test=Test de pathfinding
-selection_panel_title=Selecţia curentă
-save_file=Salvaţi fişierul...
-load_file=Încărcaţi fişier...
-okay=ok
-cancel=Revocare
-filename=Nume fisier
-selection_hp={0} / {1}
-build=Construi {0}
-furn_steel_wall=Perete din otel
-furn_steel_wall_desc=Un perete facut din otel.
-furn_door=Usa
-furn_door_desc=O uşă.
-furn_stockpile=Stocurilor
-furn_stockpile_desc=O depozitare pentru materialele dvs.
-furn_oxygen_generator=Generator de oxigen
-furn_oxygen_generator_desc=Generatoare de oxigen pentru astronauti dumneavoastră.
-furn_mining_drone_station=Trântor miniere
-furn_mining_drone_station_desc=Materiale de exploatare din nimic.
-furn_airlock=Sas
-furn_airlock_desc=O ventilatie împiedică lăsând baza de aer
+﻿menu_construction=Contruiește
+menu_work=Muncă
+menu_world=Lume
+menu_options=Opțiuni
+menu_settings=Setări
+menu_furniture=Mobilier
+menu_floor=Podea
+menu_save=Salvează
+menu_resume=Continuă
+menu_quests=Quest-uri
+menu_quit=Ieși
+furniture=Mobilier
+build_floor=Construiește Podea
+build_ladder=Construiește Scară
+remove_floor=Elimină Podea
+deconstruct_furniture=Deconstruiește Mobilier
+new_world=Lume Nouă
+load=Încarcă
+save=Salvează
+temp_pathfinding_test=Test de găsirea drumului
+selection_panel_title=Selecția Curentă
+save_file=Salvează Fișier...
+load_file=Încarcă Fișier...
+okay=Ok
+cancel=Anulează
+filename=Nume Fișier
+selection_hp={0}/{1}
+build=Build {0}
+furn_steel_wall=Perete de Oțel
+furn_steel_wall_desc=Un perete făcut din oțel.
+furn_door=Ușă
+furn_door_desc=O ușă.
+furn_stockpile=Zonă de Stocare
+furn_stockpile_desc=O zonă pentru materiale.
+furn_oxygen_generator=Generator de Oxigen
+furn_oxygen_generator_desc=Generează oxygen pentru astronauții tăi.
+furn_mining_drone_station=Dronă Minieră
+furn_mining_drone_station_desc=Minează materiale din nimic.
+furn_metal_smelter=Topitorie de Metal
+furn_metal_smelter_desc=Topește fierul brut în metal.
+furn_airlock=Ecluză Pneumatică
+furn_airlock_desc=Ecluza pneumatică împiedică aerul să iasă din bază.
 tile_Empty=Gol
-tile_Empty_desc=O ţiglă gol.
+tile_Empty_desc=O placă goală.
 tile_Floor=Podea
-tile_Floor_desc=Îndeplineşte cele mai înalte standarde de non-mini.
+tile_Floor_desc=Satisface cele mai înale standarde anti-derapante.
+tile_Ladder=Scară
+tile_Ladder_desc=Tehnologie înaltă de mișcare în spațiu. Efectivitate redusă când este prins cu brațe de mămăligă.
+furn_cloning_pod=Capsulă de Clonare
+furn_cloning_pod_desc=Creează un muncitor, apoi se auto-distruge.
+furn_power_generator=Generator de Curent Electric
+furn_power_generator_desc=Generează curent electric din nimic.
+furn_power_cell_press=Presă de Celule de Putere
+furn_power_cell_press_desc=Presează metal si flux în Celule de Putere.
+furn_small_landing_pad=Zonă de Aterizare
+furn_small_landing_pad_desc=O zonă mica pentru aterizarea bărcilor spațiale.
+furn_heater=Încălzitor
+furn_heater_desc=Ridică temperatura camerei.
+furn_oxygen_compressor=Compresor de Oxigen
+furn_oxygen_compressor_desc=Collectează oxigen cănd este destul în cameră. Eliberează oxigen cănd nu este.
+furn_solar_panel=Panou Solar
+furn_solar_panel_desc=Generează electricitate din lumină.
+need_oxygen=Oxygen {0}
