--- a/es_ES.lang
+++ b/es_ES.lang
@@ -7,6 +7,7 @@ menu_furniture=Mueble
 menu_floor=Piso
 menu_save=Guardar
 menu_resume=Continuar
+menu_quests=Misiones
 menu_quit=Salir
 furniture=Mueble
 build_floor=Poner Piso
@@ -57,4 +58,6 @@ furn_heater=Calentador
 furn_heater_desc=Aumenta la temperatura de la habitación.
 furn_oxygen_compressor=Compresor de Oxígeno
 furn_oxygen_compressor_desc=Recolecta oxígeno cuando hay suficiente en la habitación, y lo libera cuando escasea.
+furn_solar_panel=Panel Solar
+furn_solar_panel_desc=Convierte luz en electricidad.
 need_oxygen=Oxígeno {0}
