Small fixes to the romanian localization.

--- a/ro_RO.lang
+++ b/ro_RO.lang
@@ -1,4 +1,4 @@
-﻿menu_construction=Contruiește
+﻿menu_construction=Construiește
 menu_work=Muncă
 menu_world=Lume
 menu_options=Opțiuni
@@ -13,7 +13,7 @@ furniture=Mobilier
 build_floor=Construiește Podea
 build_ladder=Construiește Scară
 remove_floor=Elimină Podea
-deconstruct_furniture=Deconstruiește Mobilier
+deconstruct_furniture=Elimină Mobilier
 new_world=Lume Nouă
 load=Încarcă
 save=Salvează
@@ -25,7 +25,7 @@ okay=Ok
 cancel=Anulează
 filename=Nume Fișier
 selection_hp={0}/{1}
-build=Build {0}
+build=Construiește {0}
 furn_steel_wall=Perete de Oțel
 furn_steel_wall_desc=Un perete făcut din oțel.
 furn_door=Ușă
@@ -33,7 +33,7 @@ furn_door_desc=O ușă.
 furn_stockpile=Zonă de Stocare
 furn_stockpile_desc=O zonă pentru materiale.
 furn_oxygen_generator=Generator de Oxigen
-furn_oxygen_generator_desc=Generează oxygen pentru astronauții tăi.
+furn_oxygen_generator_desc=Generează oxigen pentru astronauții tăi.
 furn_mining_drone_station=Dronă Minieră
 furn_mining_drone_station_desc=Minează materiale din nimic.
 furn_metal_smelter=Topitorie de Metal
@@ -41,23 +41,23 @@ furn_metal_smelter_desc=Topește fierul brut în metal.
 furn_airlock=Ecluză Pneumatică
 furn_airlock_desc=Ecluza pneumatică împiedică aerul să iasă din bază.
 tile_Empty=Gol
-tile_Empty_desc=O placă goală.
+tile_Empty_desc=Un spațiu gol.
 tile_Floor=Podea
-tile_Floor_desc=Satisface cele mai înale standarde anti-derapante.
+tile_Floor_desc=Satisface cele mai înalte standarde anti-derapante.
 tile_Ladder=Scară
 tile_Ladder_desc=Tehnologie înaltă de mișcare în spațiu. Efectivitate redusă când este prins cu brațe de mămăligă.
 furn_cloning_pod=Capsulă de Clonare
 furn_cloning_pod_desc=Creează un muncitor, apoi se auto-distruge.
-furn_power_generator=Generator de Curent Electric
-furn_power_generator_desc=Generează curent electric din nimic.
-furn_power_cell_press=Presă de Celule de Putere
-furn_power_cell_press_desc=Presează metal si flux în Celule de Putere.
+furn_power_generator=Generator de Electricitate
+furn_power_generator_desc=Generează electricitate din nimic.
+furn_power_cell_press=Presă de Celule Încărcate
+furn_power_cell_press_desc=Presează metal si flux în Celule Încărcate.
 furn_small_landing_pad=Zonă de Aterizare
-furn_small_landing_pad_desc=O zonă mica pentru aterizarea bărcilor spațiale.
+furn_small_landing_pad_desc=O zonă pentru aterizarea micilor bărci spațiale.
 furn_heater=Încălzitor
 furn_heater_desc=Ridică temperatura camerei.
 furn_oxygen_compressor=Compresor de Oxigen
-furn_oxygen_compressor_desc=Collectează oxigen cănd este destul în cameră. Eliberează oxigen cănd nu este.
+furn_oxygen_compressor_desc=Colectează oxigen cănd este destul în cameră. Eliberează oxigen cănd nu este.
 furn_solar_panel=Panou Solar
 furn_solar_panel_desc=Generează electricitate din lumină.
-need_oxygen=Oxygen {0}
+need_oxygen=Oxigen {0}
