Changed some translations so they fit better.

--- a/ro_RO.lang
+++ b/ro_RO.lang
@@ -3,17 +3,17 @@ menu_work=Muncă
 menu_world=Lume
 menu_options=Opțiuni
 menu_settings=Setări
-menu_furniture=Mobilier
+menu_furniture=Obiecte
 menu_floor=Podea
 menu_save=Salvează
 menu_resume=Continuă
-menu_quests=Quest-uri
+menu_quests=Misiuni
 menu_quit=Ieși
-furniture=Mobilier
+furniture=Obiecte
 build_floor=Construiește Podea
 build_ladder=Construiește Scară
 remove_floor=Elimină Podea
-deconstruct_furniture=Elimină Mobilier
+deconstruct_furniture=Elimină Obiecte
 new_world=Lume Nouă
 load=Încarcă
 save=Salvează
@@ -40,23 +40,23 @@ furn_metal_smelter=Topitorie de Metal
 furn_metal_smelter_desc=Topește fierul brut în metal.
 furn_airlock=Ecluză Pneumatică
 furn_airlock_desc=Ecluza pneumatică împiedică aerul să iasă din bază.
-tile_Empty=Gol
+tile_Empty=Spațiu Gol
 tile_Empty_desc=Un spațiu gol.
 tile_Floor=Podea
 tile_Floor_desc=Satisface cele mai înalte standarde anti-derapante.
 tile_Ladder=Scară
-tile_Ladder_desc=Tehnologie înaltă de mișcare în spațiu. Efectivitate redusă când este prins cu brațe de mămăligă.
+tile_Ladder_desc=Tehnologie înaltă de mișcare în spațiu. Efectivitate redusă când este prins cu brațe de tăiței.
 furn_cloning_pod=Capsulă de Clonare
 furn_cloning_pod_desc=Creează un muncitor, apoi se auto-distruge.
 furn_power_generator=Generator de Electricitate
 furn_power_generator_desc=Generează electricitate din nimic.
-furn_power_cell_press=Presă de Celule Încărcate
-furn_power_cell_press_desc=Presează metal si flux în Celule Încărcate.
-furn_small_landing_pad=Zonă de Aterizare
+furn_power_cell_press=Presă de Celule Energetice
+furn_power_cell_press_desc=Presează metal si flux în Celule Energetice.
+furn_small_landing_pad=Zonă Mică de Aterizare
 furn_small_landing_pad_desc=O zonă pentru aterizarea micilor bărci spațiale.
 furn_heater=Încălzitor
 furn_heater_desc=Ridică temperatura camerei.
-furn_oxygen_compressor=Compresor de Oxigen
+furn_oxygen_compressor=Rezervor de Oxigen
 furn_oxygen_compressor_desc=Colectează oxigen cănd este destul în cameră. Eliberează oxigen cănd nu este.
 furn_solar_panel=Panou Solar
 furn_solar_panel_desc=Generează electricitate din lumină.
