Added beds to en_US and ro_RO and fixed some punctuation.

--- a/en_US.lang
+++ b/en_US.lang
@@ -39,19 +39,19 @@ furn_mining_drone_station_desc=Mining materials out of nothing.
 furn_metal_smelter=Metal Smelter
 furn_metal_smelter_desc=Smelts your raw iron into metal.
 furn_airlock=Airlock
-furn_airlock_desc=An Airlock prevents air from leaving the base
+furn_airlock_desc=Prevents air from leaving the base.
 tile_Empty=Empty
 tile_Empty_desc=An empty tile.
 tile_Floor=Floor
 tile_Floor_desc=Meets the highest non-skid standards.
 tile_Ladder=Ladder
-tile_Ladder_desc=High-tech space movement system. Effectiveness reduced when held by weak noodle arms
+tile_Ladder_desc=High-tech space movement system. Effectiveness reduced when held by weak noodle arms.
 furn_cloning_pod=Cloning Pod
 furn_cloning_pod_desc=Creates an additional worker, then is destroyed.
 furn_power_generator=Power Generator
 furn_power_generator_desc=Generates power out of nothing.
 furn_power_cell_press=Power Cell Press
-furn_power_cell_press_desc=Presses metal and flux into Power Cells
+furn_power_cell_press_desc=Presses metal and flux into Power Cells.
 furn_small_landing_pad=Small Landing Pad
 furn_small_landing_pad_desc=A landing pad for small spaceboats to land.
 furn_heater=Heater
@@ -61,3 +61,5 @@ furn_oxygen_compressor_desc=Collects oxygen when there is enough in the room. Re
 furn_solar_panel=Solar Panel
 furn_solar_panel_desc=Converts light to electricity.
 need_oxygen=Oxygen {0}
+furn_simple_bed=Bed
+furn_simple_bed_desc=A simple bed.
