--- a/ro_RO.lang
+++ b/ro_RO.lang
@@ -61,3 +61,5 @@ furn_oxygen_compressor_desc=Colectează oxigen cănd este destul în cameră. El
 furn_solar_panel=Panou Solar
 furn_solar_panel_desc=Generează electricitate din lumină.
 need_oxygen=Oxigen {0}
+furn_simple_bed=Pat
+furn_simple_bed_desc=Un pat simplu.
