--- a/en_US.lang
+++ b/en_US.lang
@@ -63,3 +63,5 @@ furn_solar_panel_desc=Converts light to electricity.
 need_oxygen=Oxygen {0}
 furn_simple_bed=Bed
 furn_simple_bed_desc=A simple bed.
+furn_rt_generator=RTG
+furn_rt_generator_desc=Generates power and heat.
