--- a/en_US.lang
+++ b/en_US.lang
@@ -63,3 +63,11 @@ furn_solar_panel_desc=Converts light to electricity.
 need_oxygen=Oxygen {0}
 furn_simple_bed=Bed
 furn_simple_bed_desc=A simple bed.
+furn_rt_generator=RTG
+furn_rt_generator_desc=Radioisotope thermoelectric generator provides electricity and heat.
+furn_mine=A Mining Spot
+furn_mine_desc=A spot for mining ore.
+furn_accumulator=Accumulator
+furn_accumulator_desc=Stores power.
+furn_pump_air=Air Pump
+furn_pump_air_desc=Pumps air between two rooms.
