--- a/es_ES.lang
+++ b/es_ES.lang
@@ -61,3 +61,13 @@ furn_oxygen_compressor_desc=Recolecta oxígeno cuando hay suficiente en la habit
 furn_solar_panel=Panel Solar
 furn_solar_panel_desc=Convierte luz en electricidad.
 need_oxygen=Oxígeno {0}
+furn_simple_bed=Cama
+furn_simple_bed_desc=Una cama simple.
+furn_rt_generator=RTG
+furn_rt_generator_desc=Generador termoeléctrico de radioisótopos provee electricidad y calor.
+furn_mine=Sitio de minería
+furn_mine_desc=Un lugar donde extraer minerales.
+furn_accumulator=Acumulador
+furn_accumulator_desc=Guarda energía.
+furn_pump_air=Bomba de aire
+furn_pump_air_desc=Bombea aire entre dos habitaciones.
