--- a/ro_RO.lang
+++ b/ro_RO.lang
@@ -63,3 +63,11 @@ furn_solar_panel_desc=Generează electricitate din lumină.
 need_oxygen=Oxigen {0}
 furn_simple_bed=Pat
 furn_simple_bed_desc=Un pat simplu.
+furn_rt_generator=GRT
+furn_rt_generator_desc=Generatorul radioizotop termoelectric furnizează electricitate și căldură.
+furn_mine=Spațiu Minier
+furn_mine_desc=Un spațiu prentu minat.
+furn_accumulator=Acumulator
+furn_accumulator_desc=Stochează energie electrică.
+furn_pump_air=Pompă de Aer
+furn_pump_air_desc=Pompează aer între două camere.
