--- a/es_ES.lang
+++ b/es_ES.lang
@@ -71,3 +71,9 @@ furn_accumulator=Acumulador
 furn_accumulator_desc=Guarda energía.
 furn_pump_air=Bomba de aire
 furn_pump_air_desc=Bombea aire entre dos habitaciones.
+furn_metal_furnace=Horno de metales
+furn_metal_furnace_desc=Funde diferentes minerales en metales.
+furn_vent=Ventilación
+furn_accumulator=Acumulador
+furn_astro_wall=Pared de roca
+furn_astro_wall_desc=Es un muro de roca!
