Fixed small typo and hyphenation.

--- a/nb_NO.lang
+++ b/nb_NO.lang
@@ -55,7 +55,7 @@ furn_small_landing_pad_desc=En liten landingssone der romskip kan lande.
 furn_heater=Ovn
 furn_heater_desc=Øker temperaturen i rommet.
 furn_oxygen_compressor=Oksygen kompressor
-furn_oxygen_compressor_desc=Lagrer oksygen fra rommet når det er for mye, og slupper den ut igjen når det er for lite.
+furn_oxygen_compressor_desc=Lagrer oksygen fra rommet når det er for mye, og slipper den ut igjen når det er for lite.
 furn_solar_panel=Solcelle panel 
 furn_solar_panel_desc=Lager strøm utav lys.
 furn_simple_bed=Seng
@@ -79,7 +79,7 @@ tile_Empty_desc=En tom rute.
 tile_Floor=Gulv
 tile_Floor_desc=Et høykvalitets sklisikkert gulv.
 tile_Ladder=Stige
-tile_Ladder_desc=Høy teknolgisk rom transport verktøy.
+tile_Ladder_desc=Høyteknolgisk romtransport verktøy.
 need_oxygen=Oksygen{0}
 need_sleep=Søvn {0}
 job_no_job_desc=Ingenting
