--- a/pl_PL.lang
+++ b/pl_PL.lang
@@ -1,31 +1,109 @@
-﻿build_floor=Konstruuj podłogę
-remove_floor=Usuń podłogę
-deconstruct_furniture=Zdemontuj sprzęt
-new_world=Nowy Świat
-load=Wczytaj
+lang=Polski
+menu_apply=Zastosuj
+menu_construction=Budowa
+menu_work=Praca
+menu_world=Świat
+menu_options=Opcje
+menu_settings=Ustawienia
+menu_furniture=Sprzęt
+menu_floor=Podłoga
+menu_save=Zapisz
 save=Zapisz
+load=Wczytaj
+job_list=Lista prac
+menu_resume=Kontynuuj
+menu_quests=Zadania
+menu_quit=Wyjdź
+button_menu={0}
+furniture=Furniture: {0}
+deconstruct_furniture=Zdemontuj sprzęt
+new_world=Nowy świat
+dummy_message_text=Ustaw wiadomość!!!
+button_yes=Tak
+button_no=Nie
 temp_pathfinding_test=Test Pathfindingu
 selection_panel_title=Bieżące zaznaczenie
-save_file=Zapisz plik...
-load_file=Wczytaj plik...
 okay=Okej
-cancel=Anuluj
+cancel=Anuluij
 filename=Nazwa pliku
 selection_hp={0}/{1}
-build=Konstruuj {0}
+build=Build {0}
 furn_steel_wall=Stalowa ściana
 furn_steel_wall_desc=Ściana ze stali.
 furn_door=Drzwi
 furn_door_desc=Po prostu drzwi.
-furn_stockpile=Składowisko
+furn_stockpile=Składowsko
 furn_stockpile_desc=Składzik na twoje surowce.
 furn_oxygen_generator=Generator tlenu
-furn_oxygen_generator_desc=Wytwarza tlen dla astronautów.
+furn_oxygen_generator_desc=Generuje tlen dla twoich astronautów.
 furn_mining_drone_station=Dron wydobywczy
 furn_mining_drone_station_desc=Wydobywa surowce z niczego.
+furn_metal_smelter=Huta metalu
+furn_metal_smelter_desc=Przetapia twoje surowe żelazo w metal.
+furn_metal_furnace=Metalowy piec
+furn_metal_furnace_desc=Przepala twój surowy kruszec w metalowe płachty.
 furn_airlock=Śluza powietrzna
 furn_airlock_desc=Zapobiega utracie powietrza w bazie.
+furn_cloning_pod=Stacja klonowania
+furn_cloning_pod_desc=Tworzy dodatkowego astronautę, następnie zostaje zniszczona.
+furn_power_generator=Generator prądu
+furn_power_generator_desc=Generuje prąd z niczego.
+furn_power_cell_press=Prasa ogniw mocy
+furn_power_cell_press_desc=Tworzy Ogniwa mocy z metalu i fluxu.
+furn_small_landing_pad=Małe lądowisko
+furn_small_landing_pad_desc=Miejsce do lądowania dla małych statków kosmicznych.
+furn_heater=Kaloryfer
+furn_heater_desc=Ogrzewa pomieszczenie.
+furn_oxygen_compressor=Kompresor tlenu
+furn_oxygen_compressor_desc=Zbiera tlen kiedy jest go wystarczająco w pomieszczeniu, uwalnia kiedy jest go za mało.
+furn_solar_panel=Panel słoneczny
+furn_solar_panel_desc=Konwertuje światło na elektryczność.
+furn_simple_bed=Łóżko
+furn_simple_bed_desc=Proste łóżko.
+furn_rt_generator=RTG
+furn_rt_generator_desc=Radioizotopowy generator termoelektryczny dostarcza elektryczność i ciepło.
+furn_mine=Miejsce do kopania
+furn_mine_desc=Miejsce do kopania minerałów.
+furn_accumulator=Akumulator
+furn_accumulator_desc=Przechowuje prąd.
+furn_pump_air=Pompa powietrza
+furn_pump_air_desc=Pompuje powietrze pomiędzy dwoma pomieszczeniami.
+furn_vent=Kratka wentylacyjna
+furn_vent_desc=Pozwala powietrzu przepływać pomiędzy pomieszeniami.
+util_power_cable=Przewód zasilający
+util_power_cable_desc=Przewodzi prąd.
+util_water_pipe=Rura z wodą
+util_water_pipe_desc=Przenosi wodę.
 tile_Empty=Pusty
 tile_Empty_desc=Pusty kafelek.
 tile_Floor=Podłoga
 tile_Floor_desc=Podłoga, na której na pewno się nie poślizgniesz!
+tile_Ladder=Drabina
+tile_Ladder_desc=Zaawansowany technicznie system poruszania się w kosmosie.
+need_oxygen=Tlen {0}
+need_sleep=Sen {0}
+job_no_job_desc=Nic nie robi.
+job_stockpile_moving_desc=Transportowanie do składu
+job_mining_drone_station_mining_desc=Wydobywanie złoża z maszyny
+job_cloning_pod_cloning_desc=Klonowanie postaci
+job_power_generator_filling_desc=Napełniane generatora prądu
+job_ore_mine_mining_desc=Wykopywanie złoża z kopalni
+overlay_none=Nic
+overlay_oxygen=Tlen
+overlay_room=Pokoje
+overlay_power=Prąd
+overlay_temperature=Temperatura
+overlay_debug_thermal_diffusivity=Debug: Dyfuzyjność Cieplna
+overlay_debug_heat_generation=Debug: Generowanie Ciepła
+message_creating_new_world=Tworzenie nowego świata...
+message_saving_game=Zapisywanie gry...
+message_game_saved=Gra zapisana!
+message_name_or_file_needed_for_save=Musisz wpisać nazwę lub wybrać plik aby go nadpisać!
+message_file_needed_for_load=Musisz wybrać plik!
+message_file_doesn't_exist=Plik nie istnieje!
+message_loading_game=Ładowanie...
+prompt_save_before_creating_new_world=Czy chciałbyś zapisać grę przed utworzeniem nowego świata?
+prompt_save_before_loading_new_game=Czy chciałbyś zapisać grę przez wczytaniem innej gry?
+prompt_overwrite_existing_file=Plik {0} już istnieje! Czy chcesz go nadpisać?
+prompt_delete_file=Usunąć plik {0}? Tej operacji nie można cofnąć.
+prompt_confirm_quit=Czy jesteś pewny, że chcesz opuścić grę?
