--- a/es_ES.lang
+++ b/es_ES.lang
@@ -1,3 +1,4 @@
+menu_apply=Aplicar
 menu_construction=Construcción
 menu_work=Trabajo
 menu_world=Mundo
@@ -6,22 +7,24 @@ menu_settings=Ajustes
 menu_furniture=Mueble
 menu_floor=Piso
 menu_save=Guardar
+save=Guardar
+load=Cargar
+job_list=Lista de trabas
 menu_resume=Continuar
 menu_quests=Misiones
 menu_quit=Salir
-furniture=Mueble
-build_floor=Poner Piso
-build_ladder=Construir Escalera
-remove_floor=Quitar Piso
+menu_quit_game=Salir del Juego
+menu_quit_to_menu=Menu Principal
+button_menu={0}
+furniture=Mueble: {0}
 deconstruct_furniture=Deconstruir Mueble
 new_world=Nuevo Mundo
-load=Cargar
-save=Guardar
+dummy_message_text=Pon un mensaje de texto!!
+button_yes=Si
+button_no=No
 temp_pathfinding_test=Prueba de búsqueda de caminos
 selection_panel_title=Selección Actual
-save_file=Guardar Archivo...
-load_file=Cargar Archivo...
-okay=Aceptar
+okay=Ok
 cancel=Cancelar
 filename=Nombre del Archivo
 selection_hp={0}/{1}
@@ -38,14 +41,10 @@ furn_mining_drone_station=Estación de minería robótica
 furn_mining_drone_station_desc=Extrayendo materiales de la nada.
 furn_metal_smelter=Fundidor de metales
 furn_metal_smelter_desc=Funde el hierro crudo creando un metal.
+furn_metal_furnace=Horno de metales
+furn_metal_furnace_desc=Funde diferentes minerales en metales.
 furn_airlock=Esclusa de aire
 furn_airlock_desc=Una esclusa de aire previente que la base se quede sin aire.
-tile_Empty=Nada
-tile_Empty_desc=Un espacio vacio.
-tile_Floor=Piso
-tile_Floor_desc=Cumple con los estándares más altos de antideslizantes.
-tile_Ladder=Escalera
-tile_Ladder_desc=Sistema de movimiento espacial de alta tecnología. Efectividad reducida cuando la sostienen brazos debiles.
 furn_cloning_pod=Capullo de Clonación
 furn_cloning_pod_desc=Crea un trabajador adicional, y luego se destruye.
 furn_power_generator=Generador eléctrico
@@ -60,7 +59,6 @@ furn_oxygen_compressor=Compresor de Oxígeno
 furn_oxygen_compressor_desc=Recolecta oxígeno cuando hay suficiente en la habitación, y lo libera cuando escasea.
 furn_solar_panel=Panel Solar
 furn_solar_panel_desc=Convierte luz en electricidad.
-need_oxygen=Oxígeno {0}
 furn_simple_bed=Cama
 furn_simple_bed_desc=Una cama simple.
 furn_rt_generator=RTG
@@ -71,9 +69,43 @@ furn_accumulator=Acumulador
 furn_accumulator_desc=Guarda energía.
 furn_pump_air=Bomba de aire
 furn_pump_air_desc=Bombea aire entre dos habitaciones.
-furn_metal_furnace=Horno de metales
-furn_metal_furnace_desc=Funde diferentes minerales en metales.
 furn_vent=Ventilación
-furn_accumulator=Acumulador
-furn_astro_wall=Pared de roca
-furn_astro_wall_desc=Es un muro de roca!
+furn_vent_desc=AlloPermite que el aire corra entre habitaciones.
+util_power_cable=Cable eléctrico
+util_power_cable_desc=Lleva electricidad.
+util_water_pipe=Tubería de agua
+util_water_pipe_desc=Transporta agua.
+tile_Empty=Nada
+tile_Empty_desc=Un espacio vacio.
+tile_Floor=Piso
+tile_Floor_desc=Cumple con los estándares más altos de antideslizantes.
+tile_Ladder=Escalera
+tile_Ladder_desc=Sistema de movimiento espacial de alta tecnología. Efectividad reducida cuando la sostienen brazos debiles.
+prioritize=Priorizar {0}
+need_oxygen=Oxígeno {0}
+need_sleep=Sueño {0}
+job_no_job_desc=Ninguno
+job_stockpile_moving_desc=Llevando algo a reserva
+job_mining_drone_station_mining_desc=Extrayendo minerales de una máquina
+job_cloning_pod_cloning_desc=Clonando trabajador
+job_power_generator_filling_desc=Llenando generador de eléctrico
+job_ore_mine_mining_desc=Extrayendo minerales de una mina
+overlay_none=Nada
+overlay_oxygen=Oxígeno
+overlay_room=Habitación
+overlay_power=Energía
+overlay_temperature=Temperatura
+overlay_debug_thermal_diffusivity=Debug: Difusividad Térmica
+overlay_debug_heat_generation=Debug: Generación de calor
+message_creating_new_world=Creando un nuevo mundo...
+message_saving_game=Guardando juego...
+message_game_saved=Juego Grabado!
+message_name_or_file_needed_for_save=Debes ingresar un nombre o seleccionar un archivo para sobreescribir!
+message_file_needed_for_load=Debes seleccionar un archivo!
+message_file_doesn't_exist=El archivo no existe!
+message_loading_game=Cargando juego...
+prompt_save_before_creating_new_world=Te gustaría grabar antes de crear un nuevo mundo?
+prompt_save_before_loading_new_game=Te gustaría grabar antes de cargar otro juego?
+prompt_overwrite_existing_file=El archivo {0} ya existe! Te gustaría sobreescribirlo?
+prompt_delete_file=Eliminar {0}? No puedes deshacer esta acción
+prompt_confirm_quit=Estás seguro que deseas salir?
