Add robot text to config.xml and remove duplicate languages

--- a/ht_HT.lang
+++ b/ht_HT.lang
@@ -11,7 +11,7 @@ load_file=Ranpli chay...
 okay=oke
 cancel=Anile
 filename=Nom
-selection_hp={0} / / {1}
+selection_hp={0} / {1}
 build=Konstwi {0}
 furn_steel_wall=Miray en
 furn_steel_wall_desc=Kanpe tankou yon miray fèt ak fe.
