--- a/mt_MT.lang
+++ b/mt_MT.lang
@@ -11,7 +11,7 @@ load_file=Jillowdja l-fajl...
 okay=Okay
 cancel=Ikkanċella
 filename=Isem il-fajl
-selection_hp={0} / / {1}
+selection_hp={0} / {1}
 build=Jibni {0}
 furn_steel_wall=Ħajt tal-azzar
 furn_steel_wall_desc=-Ħajt magħmul mill-azzar.
