--- a/otq_.lang
+++ b/otq_.lang
@@ -11,7 +11,7 @@ load_file=Cargar ar archivo...
 okay=Xa hño
 cancel=Cancelar
 filename=Thuuhu archivo
-selection_hp={0} yá yá {1}
+selection_hp={0} yá {1}
 build=Gu̲ts'i ar {0}
 furn_steel_wall=Jot'i jar asero
 furn_steel_wall_desc='Nar ora Jot'i hecha ar asero.
