--- a/zh-CHT_CN.lang
+++ b/zh-CHT_CN.lang
@@ -23,9 +23,13 @@ furn_oxygen_generator=制氧機
 furn_oxygen_generator_desc=為你的宇航員生成氧氣。
 furn_mining_drone_station=採礦無人機
 furn_mining_drone_station_desc=無中生有的挖掘材料。
+furn_metal_smelter=金屬冶煉廠
+furn_metal_smelter_desc=你生鐵熔煉成金屬。
 furn_airlock=氣閘艙
 furn_airlock_desc=氣閘艙可以阻止空氣離開基地
 tile_Empty=空
 tile_Empty_desc=空的瓷磚。
 tile_Floor=地板
 tile_Floor_desc=符合最高的防滑標準。
+furn_power_generator=發電機
+furn_power_generator_desc=發電從無到有。
